Fixed layout issues in Info componenet and added google fonts

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,6 @@
-
+/* .headshot {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+} */
